--- a/frontend/barks-and-bubbles-frontend/src/app/services/loader/loader.service.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/services/loader/loader.service.html
@@ -2,7 +2,7 @@
   <lottie-player src="https://lottie.host/1ad35881-a4e3-4bac-920c-fcb32f4093c5/gofVpIIY6d.json"
                  background="##FFFFFF"
                  speed="1.5"
-                 style="width: 500px; height: 500px"
+                 style="width: 500px; height: 500px; z-index: 500;"
                  loop
                  autoplay
                  direction="1"
