--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.scss
@@ -182,6 +182,10 @@ h2 {
 
 .no-time-msg {
   margin-bottom: 1em;
+
+  mat-card-content{ 
+    padding-bottom: 0 !important;
+  }
 }
 
 .longer-msg {
@@ -211,6 +215,10 @@ h2 {
   padding: 10px;
   cursor: pointer;
   max-width: 17em;
+
+  mat-card-content {
+    padding-bottom: 0 !important;
+  }
 }
 
 /* Active card styling */
