feat: added confirmation panel to open to confirm deleting a pet

--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
@@ -6,7 +6,7 @@
       <button mat-icon-button
               color="warn"
               matTooltip="Delete Pet"
-              (click)="deletePet()">
+              (click)="openDeletePanel()">
         <mat-icon color="warn">delete</mat-icon>
       </button>
     </mat-card-header>
