--- a/frontend/barks-and-bubbles-frontend/src/app/services/panel service/panel-service.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/services/panel service/panel-service.html
@@ -1,6 +1,6 @@
 <div class="dialog-panel">
   <div mat-dialog-title
-       class="panel-header-primary"
+       [ngClass]="{'panel-header-primary': this.headerType == 'primary', 'panel-header-danger': this.headerType == 'warn'}"
        style="width: 96%;">
     <h2>{{ data.title }}</h2>
   </div>
