--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.scss
@@ -13,6 +13,20 @@
   align-items: baseline;
 }
 
+.btn-layout {
+  grid-column: span 2;
+  display: flex;
+  justify-content: space-around;
+
+  button {
+    width: 95%;
+  }
+
+  .margin-right {
+    margin-right: 1em;
+  }
+}
+
 form {
   display: grid;
   grid-template-columns: 1fr 1fr;
